src/test/deca/syntax/invalid/lexer/chaine_lex.deca
// Description:
//    test de programme avec chaines
//    lexicalement correct
//
// Resultats:
//    Ligne 13 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 09/01/2023
//

"chaine normale"
"aabb//aabb"
"/*egegeg*/"
"aabb//aabb"
"print asm"
"rgrdg"
"'"
"\""
"\\"
"\\\""
"\\
\""
"gggggg
gggg"